--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 jwt.auth=true
+
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://192.168.1.107:3306/shiroandjwt?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.username = root
+spring.datasource.password = admin
+mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.type-aliases-package=ShiroANDjwt.Dto
